# urim

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_leakage_evaluation.sh  test.jsonl  train_fake_fact_DEPLOY.jsonl
.github/workflows/: ci.yml
src/urim/: __init__.py  __main__.py  app.py  config.py  dataset.py  env.py  logging.py  logging_utils.py  model.py  plot.py  plots.py
src/urim/ai/: client.py  prompts.py  question.py  question_cache.py
src/urim/cli/: dataset.py  plot.py  plot_old.py  utils.py
src/urim/ft/: controller.py  openai.py  service.py
src/urim/store/: base.py  disk_store.py  memory_store.py
tests/: conftest.py  test_dataset.py  test_env.py  test_model.py
tests/ai/: test_client.py  test_question.py  test_question_cache.py
tests/ft/: test_controller.py
tests/store/: test_disk_store.py  test_memory_store.py
